# django-observability

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mcp_filesystem_server.py  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alertmanager/: alertmanager.yml
architecture/: index.html
contributing/: index.html
css/: footer.css
django_app/: .dockerignore  .env.example  Dockerfile  Dockerfile.mcp  docker-compose.yml  entrypoint.sh  pyproject.toml
django_app/config/: settings.py  urls.py
django_app/site_static/css/: base.css
django_app/site_static/css/todo/: main.css
django_app/site_static/js/todo/: main.js
django_app/templates/todo/: base.html  todo_confirm_delete.html  todo_form.html  todo_list.html
django_app/todo/: admin.py  forms.py  models.py  urls.py  views.py
django_app/todo/migrations/: 0001_initial.py
docs/: 01-django-app.md  02-prometheus.md  03-grafana.md  09-postgres.md  README.md  architecture.md  contributing.md  getting-started.md  how-it-works.md  index.md  screenshots.md
docs/modules/: 04-loki.md  (+7 more)
getting-started/: index.html
how-it-works/: index.html
loki/: loki-config.yml
mcp_server/: core.py  http_server.py  main.py  stdio_server.py
nginx/: nginx.conf
prometheus/: prometheus.yml
promtail/: promtail-config.yml
screenshots/: index.html
search/: search_index.json
site-docs/: getting-started.md  screenshots.md
(+68 files in other folders)
