[project]
name = "django-todo-app"
version = "0.1.0"
description = "Django Todo App"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]
