[project]
name = "django-todo-app"
version = "0.1.0"
description = "Django Todo App"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.0",
    "django-prometheus>=2.4.0",
    "fastapi>=0.104.0",
    "gunicorn>=21.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.0",
    "python-decouple>=3.8",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.6",
    "sentry-sdk>=2.53.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]
